# LOSSPhotPypeline

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.py  setup2.py
LOSSPhotPypeline/: __init__.py
LOSSPhotPypeline/conf/lpp_templates/: LPP-Ssex-kait.template.sh  LPP_get_fwhm.template.sh  get_local_sky.template.pro
LOSSPhotPypeline/conf/sextractor_config/: fwhm.par  fwhm.sex  kait.par  kait.sex
LOSSPhotPypeline/image/: FileNames.py  FitsInfo.py  Phot.py  __init__.py
LOSSPhotPypeline/pipeline/: LPP.fdb_latexmk  LPP.fls  LPP.py  __init__.py  untitled.py
LOSSPhotPypeline/utils/: LPP_utils.py  __init__.py  astroCatalog.py  plotLC.py
LOSSPhotPypeline/utils/LPP_bin/: LPP-Ssex-kait.template.sh  LPP-Ssex-kait2  LPP_get_fwhm2.sh  Simsubtract
LOSSPhotPypeline/utils/LPP_c/: local_sky_sub.c
LOSSPhotPypeline/utils/LPP_idl/: get_local_sky.pro  lpp_aper.pro  lpp_cal_dat2fit_apass.pro  lpp_cal_dat2fit_ps1.pro  lpp_cal_dat2fit_sdss.pro  lpp_cal_instrumag.pro  lpp_cal_landolt2natural.pro  lpp_dat_res_bin.pro  lpp_dat_res_format.pro  lpp_dat_res_group.pro  lpp_gen_star_mags.pro  lpp_get_aper_counts.pro  lpp_getpsf.pro  lpp_image_name_trans.pro  lpp_invert_natural_stand_objonly.pro  lpp_kait_photsub.pro  lpp_kait_subtract_isis.pro  lpp_kait_warp_tf_ref.pro  lpp_mag_ps1_jc.pro  lpp_mag_sdss_jc.pro  lpp_match_refstars_with_catalog.pro  lpp_nstar.pro  lpp_phot_apt.pro  lpp_phot_dat_res_group.pro  lpp_phot_psf.pro  lpp_pick_good_refstars.pro  lpp_readcolst.pro  lpp_rebin_nickel2kait.pro  lpp_sim_fake_star.pro  mag2fd.pro  remove_tags.pro  strreplace.pro  (+1 more)
