[tool.poetry]
name = "LOSSPhotPypeline"
version = "0.0.1"
description = ""
authors = ["Benjamin Stahl <benstahl92@gmail.com>"]

# Manual listing packages since module name is not conventional
packages = [
	{include = "LOSSPhotPypeline"},
]

[tool.poetry.dependencies]
python = "^3.6.1"
astropy = "^4.0.1"
astroquery = "^0.4"
numpy = "^1.18.2"
pandas = "0.23.0"
requests = "^2.23.0"
seaborn = "^0.10.0"
tqdm = "^4.43.0"
AstroSQL = "^0.3.0"
p_tqdm = "^1.3.1"
sewpy = {git = "https://github.com/megalut/sewpy"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
